# Mobile_PC_Controller

./: .gitignore  README.md  Send-Tcp.ps1  test.html
docs/: requirement.md
mobile_app/: .flutter-plugins-dependencies  pubspec.yaml
mobile_app/.dart_tool/: package_config.json  package_graph.json
mobile_app/.dart_tool/widget_preview_scaffold/: preview_manifest.json  pubspec.yaml
mobile_app/android/: gradle.properties
mobile_app/lib/: main.dart
mobile_app/lib/app/controllers/: connection_controller.dart  gyro_controller.dart  input_controller.dart  streaming_controller.dart
mobile_app/lib/app/controllers/input/: analog_input.dart  gamepad_input.dart  gyro_input.dart  input_controller.dart  rblb_input.dart
mobile_app/lib/app/data/models/: input_event.dart
mobile_app/lib/app/modules/components/: custom_progress_line.dart  custom_slider_track_shape.dart  vertical_slider.dart
mobile_app/lib/app/modules/connect/bindings/: connect_binding.dart
mobile_app/lib/app/modules/connect/views/: connect_view.dart
mobile_app/lib/app/routes/: app_pages.dart  app_routes.dart
mobile_app/lib/app/services/: webrtc_service.dart  websocket_service.dart
mobile_app/lib/app/utils/: constant.dart
pc_host/: Cargo.toml
pc_host/src/: main.rs
pc_host/src/control/: command.rs  mod.rs  ws_server.rs
pc_host/src/controller/: state.rs
pc_host/src/input/: controller_event.rs  gamepad.rs  input_handler.rs  mod.rs  vigem_mapper.rs
pc_host/src/network/: bluetooth.rs  mod.rs  signaling.rs  tcp_servers.rs  websocket.rs
pc_host/src/utils/: config.rs  logger.rs  mod.rs
(+4 files in other folders)
