[package]
name = "pc_host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
warp = "0.3"

# Mouse + keyboard
enigo = "0.6.1"

# Logging
log = "0.4"
env_logger = "0.11"
futures-util = "0.3.31"
dashmap = "6.1.0"
futures = "0.3.31"
uuid = { version = "1", features = ["v4"] }
vigem = "0.9.1"
vigem-client = "0.1.4"
once_cell = "1.21.3"
serialport = "4.8.1"

